get tournaments of team
